[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple web framework for learing Rust"
homepage = "https://github.com/Xyc2016/simple-api"
repository = "https://github.com/Xyc2016/simple-api"
readme = "README.md"
keywords = ["web", "framework"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1.72" }
once_cell = { version = "1.18.0" }
anyhow = { version = "1.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
url = "2.4.0"
cookie = { version = "0.17", features = ["private"] }
uuid = { version = "1.4", features = ["v4"] }
hex = { version = "0.4", features = ["serde"] }
hmac = {version =  "0.12" }
sha2 = "0.10.7"
base64 = "0.21.2"
digest = "0.9.0"
regex = "1.9.1"
mime_guess = "2.0.4"
